--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendored/SDL"]
 	path = vendored/SDL
 	url = https://github.com/libsdl-org/SDL.git
+[submodule "vendored/hashmap"]
+	path = vendored/hashmap
+	url = https://github.com/tidwall/hashmap.c.git
